<resources>
    <string name="app_name">TestingApps</string>
    <string name="name_hint">Your name</string>
    <string name="email_hint">Your email address</string>
    <string name="password_hint">Your password</string>
    <string name="error">Invalid data</string>
    <string name="button_revert">Revert</string>
    <string name="button_send">Send</string>
</resources>